<resources>
    <string name="app_name">ClassScheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="module_id">Module ID</string>
    <string name="add_user_to_module">Add user to module</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="start">Start</string>
    <string name="end">Finish</string>

</resources>