<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_card_light"
    android:padding="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card_light"
        android:padding="4dp">
        <TextView
            android:id="@+id/tv_Add_User_to_Module_Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_user_to_module"
            android:textAllCaps="true"
            android:textColor="@color/main_theme"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/main_theme"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Add_User_to_Module_Heading" />
        <EditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/card_background"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/name"
            android:paddingStart="16dp"
            android:textColor="@color/main_theme"
            android:textColorHint="@color/main_theme"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Name"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/main_theme"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Name" />
        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/card_background"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:textColor="@color/main_theme"
            android:textColorHint="@color/main_theme"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Email"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_Position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/position"
            android:textAllCaps="true"
            android:textColor="@color/main_theme"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_Email" />
        <EditText
            android:id="@+id/et_Position"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/card_background"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/position"
            android:paddingStart="16dp"
            android:textColor="@color/main_theme"
            android:textColorHint="@color/main_theme"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Position"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/tv_ModuleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/module_id"
            android:textAllCaps="true"
            android:textColor="@color/main_theme"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Position" />
        <EditText
            android:id="@+id/et_ModuleId"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/card_background"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/module_id"
            android:paddingStart="16dp"
            android:textColor="@color/main_theme"
            android:textColorHint="@color/main_theme"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ModuleId"
            tools:ignore="TouchTargetSizeCheck" />
        <Button
            android:id="@+id/btn_Add_UserModule"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background_light"
            android:paddingBottom="14dp"
            android:text="Add"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_ModuleId"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>